Peding adding Projects

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="home__data">
           <span class="home__greeting">Hello, I'm</span>
           <h1 class="home__name">ANANDU VIJAYAN</h1>
-          <h3 class="home__education">FRONT-END Developer</h3>
+          <h3 class="home__education">MERN STACK DEVELOPER</h3>
 
           <div class="home__buttons">
             <a download="" href="./assets/pdf/ANANDU VIJAYAN VM.pdf" class="button button--ghost">
@@ -119,14 +119,14 @@
             <div class="about__box">
               <i class="bx bx-award about__icon"></i>
               <h3 class="about__title">Experience</h3>
-              <span class="about__subtitle">0 Years Working</span>
+              <span class="about__subtitle">1 Years Working</span>
             </div>
 
 
             <div class="about__box">
               <i class="bx bx-briefcase-alt about__icon"></i>
               <h3 class="about__title">Completed</h3>
-              <span class="about__subtitle">3 Projects</span>
+              <span class="about__subtitle">6 Projects</span>
             </div>
 
             <div class="about__box">
@@ -135,7 +135,7 @@
               <span class="about__subtitle">Online 24/7</span>
             </div>
           </div>
-          <p class="about__description">FRONT-END developer, I create web pages with UI / UX user interface,</p>
+          <p class="about__description"> Very Enthusiastic,Self Motivated ,MERN STACK DEVELOPER</p>
 
           <a href="#contact" class="button">Contact Me</a>
         </div>
@@ -149,7 +149,7 @@
 
       <div class="skills__container container grid">
         <div class="skills__content">
-          <h3 class="skills__title">Front End Developer</h3>
+          <h3 class="skills__title"> Front End</h3>
 
           <div class="skills__box">
             <div class="skills__group">
@@ -157,7 +157,15 @@
                 <i class="bx bxs-badge-check"></i>
 
                 <div>
-                  <h3 class="skills__name">HTML</h3>
+                  <h3 class="skills__name">React.js</h3>
+                  <span class="skills__level">Intermediate</span>
+                </div>
+              </div>
+              <div class="skills__data">
+                <i class="bx bxs-badge-check"></i>
+
+                <div>
+                  <h3 class="skills__name">Redux</h3>
                   <span class="skills__level">Intermediate</span>
                 </div>
               </div>
@@ -166,7 +174,7 @@
                 <i class="bx bxs-badge-check"></i>
 
                 <div>
-                  <h3 class="skills__name">CSS</h3>
+                  <h3 class="skills__name">HTML</h3>
                   <span class="skills__level">Intermediate</span>
                 </div>
               </div>
@@ -190,7 +198,7 @@
           </div>
         </div>
         <div class="skills__content">
-          <h3 class="skills__title">Front End Developer</h3>
+          <h3 class="skills__title">Back End</h3>
 
           <div class="skills__box">
             <div class="skills__group">
@@ -198,7 +206,7 @@
                 <i class="bx bxs-badge-check"></i>
 
                 <div>
-                  <h3 class="skills__name">Bootstrap</h3>
+                  <h3 class="skills__name">Node.js</h3>
                   <span class="skills__level">Intermediate</span>
                 </div>
               </div>
@@ -207,7 +215,7 @@
                 <i class="bx bxs-badge-check"></i>
 
                 <div>
-                  <h3 class="skills__name">Git</h3>
+                  <h3 class="skills__name">Express.js</h3>
                   <span class="skills__level">Intermediate</span>
                 </div>
               </div>
@@ -216,9 +224,19 @@
                 <i class="bx bxs-badge-check"></i>
 
                 <div>
-                  <h3 class="skills__name">React</h3>
+                  <h3 class="skills__name">MongoDB</h3>
                   <span class="skills__level">Intermediate</span>
                 </div>
+                
+              </div>
+              <div class="skills__data">
+                <i class="bx bxs-badge-check"></i>
+
+                <div>
+                  <h3 class="skills__name">MySQL</h3>
+                  <span class="skills__level">Intermediate</span>
+                </div>
+                
               </div>
             </div>
           </div>
