pdf error fixed

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <h3 class="home__education">MERN STACK DEVELOPER</h3>
 
           <div class="home__buttons">
-            <a download="" href="./assets/pdf/ANANDU VIJAYAN VM.pdf" class="button button--ghost">
+            <a download="" href="./assets/pdf/ANANDU VIJAYAN VM MERN STACK DEVELOPER.pdf" class="button button--ghost">
               Download CV
             </a>
             <a href="#about" class="button">About me</a>
