--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
         <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
           <i class="bx bxl-facebook"></i>
         </a>
-        <a href="https://www.instagram.com/tony_martin6p/?hl=en" target="_blank" class="footer__social-link">
+        <a href="https://www.instagram.com/callme_nandhi/" target="_blank" class="footer__social-link">
           <i class="bx bxl-instagram"></i>
         </a>
         <a href="https://twitter.com/" target="_blank" class="footer__social-link">
